--- a/upsurge/src/components/Services/style.module.css
+++ b/upsurge/src/components/Services/style.module.css
@@ -19,6 +19,7 @@
 
 @media screen and (max-width: 788px) {
   .grid {
+    gap:1.5rem;
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-areas:
       'A A .'
