Fix/services and testimonials (#11)
* decrease service card size and font

* add boop effect on service cards

* decrease blank space in services

* transition bn home and services

* decrease fs and weight in services, make my other sections have consistent header size

* fix indentation in values and consistent section and header padding in all my sections

* values cards closer

--- a/upsurge/src/components/Services/style.module.css
+++ b/upsurge/src/components/Services/style.module.css
@@ -2,7 +2,7 @@
   display: grid;
   grid-template-columns: 5fr 2fr 5fr;
   /* 11 rows but 4*2 in template rows, having less is safe not to have empty rows */
-  grid-template-rows: repeat(4, 1fr 5fr);
+
   grid-template-areas:
     'A . .'
     'A . .'
@@ -19,8 +19,8 @@
 
 @media screen and (max-width: 788px) {
   .grid {
+    gap:1.5rem;
     grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: repeat(4, 5fr 1fr);
     grid-template-areas:
       'A A .'
       'a . .'
